fix(theme/style): Tabs wrong margin (#2246)

--- a/packages/theme-default/src/components/Tabs/index.module.scss
+++ b/packages/theme-default/src/components/Tabs/index.module.scss
@@ -5,13 +5,13 @@
   margin: 1rem 0;
 
   :global(div[class*='language-']) {
-    margin: 0 -0.5rem;
-    border-radius: 0;
-    font-size: 13px;
+    margin: 0 -0.5rem !important;
+    border-radius: 0 !important;
+    font-size: 13px !important;
   }
 
   :global(.rspress-code-title) {
-    padding: 8px 16px;
+    padding: 8px 16px !important;
   }
 }
 
